bin script to start test server.

--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/loop-recur/node-neo4j-test/issues"
   },
-  "homepage": "https://github.com/loop-recur/node-neo4j-test"
+  "homepage": "https://github.com/loop-recur/node-neo4j-test",
+  "dependencies": {
+    "node-getopt": "^0.2.3",
+    "shelljs": "^0.2.6"
+  }
 }
