--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "description": "Node scripts and libraries for running an in-memory neo4j database in your test scripts.",
   "scripts": {
-    "install": "git submodule init && git submodule update"
+    "install": "./bin/install"
   },
   "repository": {
     "type": "git",
