upgrade to newer test server.
Removes in-memory db.
Adds fulltext auto-indexed text field on nodes.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neo4j-test",
-  "version": "0.0.6",
-  "description": "Node scripts and libraries for running an in-memory neo4j database in your test scripts.",
+  "version": "1.0.0",
+  "description": "Node scripts and libraries for running a neo4j database in your test scripts.",
   "scripts": {
     "install": "./bin/install"
   },
